--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+django-extensions==1.9.8
 django==2.0
 djangorestframework==3.7.3
 pytz==2017.3              # via django
+six==1.11.0               # via django-extensions
+typing==3.6.2             # via django-extensions
