--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.5",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^1.0.0-beta.22",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
