--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
-    "material-ui": "^1.0.0-beta.22",
+    "material-ui": "^1.0.0-beta.23",
+    "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.2",
