Enforce trailing commas

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "format": "prettier --single-quote --write **/*.js"
+    "format": "prettier --write **/*.js"
   },
   "proxy": {
     "/api": {
