Also proxy /static requests
Some resources from django rest framework are on this url.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,10 @@
     "/admin": {
       "target": "http://localhost:8000",
       "ws": true
+    },
+    "/static": {
+      "target": "http://localhost:8000",
+      "ws": true
     }
   },
   "devDependencies": {
