--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,22 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+asgiref==1.1.2            # via channels, daphne
+attrs==17.3.0             # via automat
+autobahn==17.10.1         # via daphne
+automat==0.6.0            # via twisted
+channels==1.1.8
+colorlog==3.1.0
+constantly==15.1.0        # via twisted
+daphne==1.3.0             # via channels
 django-extensions==1.9.8
 django==2.0
 djangorestframework==3.7.3
+hyperlink==17.3.1         # via twisted
+incremental==17.5.0       # via twisted
 pytz==2017.3              # via django
-six==1.11.0               # via django-extensions
+six==1.11.0               # via asgiref, autobahn, automat, django-extensions, txaio
+twisted==17.9.0           # via daphne
+txaio==2.8.2              # via autobahn
 typing==3.6.2             # via django-extensions
+zope.interface==4.4.3     # via twisted
