--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autosuggest-highlight": "^3.1.1",
     "classnames": "^2.2.5",
+    "django-channels": "^1.1.8",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "material-ui": "^1.0.0-beta.23",
