--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "format": "prettier --write **/*.js"
+    "format": "prettier --write '**/*.js'"
   },
   "proxy": {
     "/api": {
