--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
     "django-channels": "^1.1.8",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
-    "material-ui": "^1.0.0-beta.29",
+    "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
