--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
+    "rc-slider": "^8.6.0",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
