--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,24 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-asgiref==1.1.2            # via channels, daphne
-attrs==17.3.0             # via automat
-autobahn==17.10.1         # via daphne
-automat==0.6.0            # via twisted
-channels==1.1.8
-colorlog==3.1.0
+asgiref==2.3.2            # via channels
+async-timeout==3.0.1      # via asgiref
+attrs==18.2.0             # via automat, twisted
+autobahn==19.1.1          # via daphne
+automat==0.7.0            # via twisted
+channels==2.1.7
+colorlog==4.0.2
 constantly==15.1.0        # via twisted
-daphne==1.3.0             # via channels
-django-extensions==1.9.8
-django==2.0
-djangorestframework==3.7.3
-hyperlink==17.3.1         # via twisted
+daphne==2.2.5             # via channels
+django-extensions==2.1.5
+django==2.1.7
+djangorestframework==3.9.1
+hyperlink==18.0.0         # via twisted
+idna==2.8                 # via hyperlink
 incremental==17.5.0       # via twisted
-pytz==2017.3              # via django
-six==1.11.0               # via asgiref, autobahn, automat, django-extensions, txaio
-twisted==17.9.0           # via daphne
-txaio==2.8.2              # via autobahn
-typing==3.6.2             # via django-extensions
-zope.interface==4.4.3     # via twisted
+pyhamcrest==1.9.0         # via twisted
+pytz==2018.9              # via django
+six==1.12.0               # via autobahn, automat, django-extensions, pyhamcrest, txaio
+twisted==18.9.0           # via daphne
+txaio==18.8.1             # via autobahn
+zope.interface==4.6.0     # via twisted
